// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._14xpeyw10,html._14xpeyw10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1h2wcql0 _1ix0i1h18 _1ix0i1h1b">
+        <div class="wwc2gv0 _14xpeyw8n _14xpeyw7j _14xpeywav _14xpeyw9r _14xpeyw5f _14xpeyw67 _14xpeywi7 _14xpeyw4j _14xpeyw4c _1ix0i1h18 _1ix0i1h1b _14xpeyw33 _14xpeyw36">
+          <span class="wwc2gv0 _14xpeyw4z _1ix0i1h0 _1ix0i1h1 _1ix0i1h21 _1omdrsc4 _1ix0i1hd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .wwc2gv0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .wwc2gv0 {
  outline: none;
}
.wwc2gv1 {
  display: block;
}
.wwc2gv2 {
  line-height: 1;
}
.wwc2gv3 {
  list-style: none;
}
.wwc2gv4 {
  quotes: none;
}
.wwc2gv4:after,
.wwc2gv4:before {
  content: "";
}
.wwc2gv5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.wwc2gv6 {
  -webkit-appearance: none;
  appearance: none;
}
.wwc2gv7 {
  background-color: transparent;
}
.wwc2gv9 {
  color: inherit;
}
.wwc2gva:disabled {
  opacity: 1;
}
.wwc2gva::-ms-expand {
  display: none;
}
.wwc2gvc[type="number"] {
  -moz-appearance: textfield;
}
.wwc2gvc[type="number"]::-webkit-inner-spin-button,
.wwc2gvc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.wwc2gvc::-ms-clear {
  display: none;
}
.wwc2gvc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.wwc2gvf {
  color: inherit;
  text-decoration: none;
}
._14xpeyw0 {
  overflow: hidden;
}
._14xpeyw1 {
  overflow: scroll;
}
._14xpeyw2 {
  overflow: visible;
}
._14xpeyw3 {
  overflow: auto;
}
._14xpeyw4 {
  -webkit-user-select: none;
  user-select: none;
}
._14xpeyw5 {
  outline: none;
}
._14xpeyw6 {
  opacity: 0;
}
._14xpeyw7 {
  z-index: 0;
}
._14xpeyw8 {
  z-index: 1;
}
._14xpeyw9 {
  z-index: 2;
}
._14xpeywa {
  z-index: 90;
}
._14xpeywb {
  z-index: 100;
}
._14xpeywc {
  z-index: 200;
}
._14xpeywd {
  z-index: 290;
}
._14xpeywe {
  z-index: 300;
}
._14xpeywf {
  z-index: 400;
}
._14xpeywg {
  cursor: default;
}
._14xpeywh {
  cursor: pointer;
}
._14xpeywi {
  pointer-events: none;
}
._14xpeywj {
  top: 0;
}
._14xpeywk {
  bottom: 0;
}
._14xpeywl {
  left: 0;
}
._14xpeywm {
  right: 0;
}
._14xpeywn {
  height: 100%;
}
._14xpeywo {
  height: var(--johwgp9);
}
._14xpeywp {
  width: 100%;
}
._14xpeywq {
  width: var(--johwgp9);
}
._14xpeywr {
  min-width: 0;
}
._14xpeyws {
  max-width: var(--johwgp11);
}
._14xpeywt {
  max-width: var(--johwgp12);
}
._14xpeywu {
  max-width: var(--johwgp13);
}
._14xpeywv {
  max-width: var(--johwgp14);
}
._14xpeyww {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._14xpeywx {
  transition: var(--johwgp5i);
}
._14xpeywy {
  transition: var(--johwgp5j);
}
._14xpeywz:active {
  transform: var(--johwgp5k);
}
html._14xpeyw10 ._14xpeyw12,
html:not(._14xpeyw10) ._14xpeyw11 {
  background: var(--johwgp1t);
}
html._14xpeyw10 ._14xpeyw14,
html:not(._14xpeyw10) ._14xpeyw13 {
  background: var(--johwgp1u);
}
html._14xpeyw10 ._14xpeyw16,
html:not(._14xpeyw10) ._14xpeyw15 {
  background: var(--johwgp1v);
}
html._14xpeyw10 ._14xpeyw18,
html:not(._14xpeyw10) ._14xpeyw17 {
  background: var(--johwgp1w);
}
html._14xpeyw10 ._14xpeyw1a,
html:not(._14xpeyw10) ._14xpeyw19 {
  background: var(--johwgp1x);
}
html._14xpeyw10 ._14xpeyw1c,
html:not(._14xpeyw10) ._14xpeyw1b {
  background: var(--johwgp1y);
}
html._14xpeyw10 ._14xpeyw1e,
html:not(._14xpeyw10) ._14xpeyw1d {
  background: var(--johwgp1z);
}
html._14xpeyw10 ._14xpeyw1g,
html:not(._14xpeyw10) ._14xpeyw1f {
  background: var(--johwgp20);
}
html._14xpeyw10 ._14xpeyw1i,
html:not(._14xpeyw10) ._14xpeyw1h {
  background: var(--johwgp21);
}
html._14xpeyw10 ._14xpeyw1k,
html:not(._14xpeyw10) ._14xpeyw1j {
  background: var(--johwgp22);
}
html._14xpeyw10 ._14xpeyw1m,
html:not(._14xpeyw10) ._14xpeyw1l {
  background: var(--johwgp23);
}
html._14xpeyw10 ._14xpeyw1o,
html:not(._14xpeyw10) ._14xpeyw1n {
  background: var(--johwgp24);
}
html._14xpeyw10 ._14xpeyw1q,
html:not(._14xpeyw10) ._14xpeyw1p {
  background: var(--johwgp25);
}
html._14xpeyw10 ._14xpeyw1s,
html:not(._14xpeyw10) ._14xpeyw1r {
  background: var(--johwgp26);
}
html._14xpeyw10 ._14xpeyw1u,
html:not(._14xpeyw10) ._14xpeyw1t {
  background: var(--johwgp27);
}
html._14xpeyw10 ._14xpeyw1w,
html:not(._14xpeyw10) ._14xpeyw1v {
  background: var(--johwgp28);
}
html._14xpeyw10 ._14xpeyw1y,
html:not(._14xpeyw10) ._14xpeyw1x {
  background: var(--johwgp29);
}
html._14xpeyw10 ._14xpeyw20,
html:not(._14xpeyw10) ._14xpeyw1z {
  background: var(--johwgp2a);
}
html._14xpeyw10 ._14xpeyw22,
html:not(._14xpeyw10) ._14xpeyw21 {
  background: var(--johwgp2b);
}
html._14xpeyw10 ._14xpeyw24,
html:not(._14xpeyw10) ._14xpeyw23 {
  background: var(--johwgp2c);
}
html._14xpeyw10 ._14xpeyw26,
html:not(._14xpeyw10) ._14xpeyw25 {
  background: var(--johwgp2d);
}
html._14xpeyw10 ._14xpeyw28,
html:not(._14xpeyw10) ._14xpeyw27 {
  background: var(--johwgp2e);
}
html._14xpeyw10 ._14xpeyw2a,
html:not(._14xpeyw10) ._14xpeyw29 {
  background: var(--johwgp2f);
}
html._14xpeyw10 ._14xpeyw2c,
html:not(._14xpeyw10) ._14xpeyw2b {
  background: var(--johwgp2g);
}
html._14xpeyw10 ._14xpeyw2e,
html:not(._14xpeyw10) ._14xpeyw2d {
  background: var(--johwgp2h);
}
html._14xpeyw10 ._14xpeyw2g,
html:not(._14xpeyw10) ._14xpeyw2f {
  background: var(--johwgp2i);
}
html._14xpeyw10 ._14xpeyw2i,
html:not(._14xpeyw10) ._14xpeyw2h {
  background: var(--johwgp2j);
}
html._14xpeyw10 ._14xpeyw2k,
html:not(._14xpeyw10) ._14xpeyw2j {
  background: var(--johwgp2k);
}
html._14xpeyw10 ._14xpeyw2m,
html:not(._14xpeyw10) ._14xpeyw2l {
  background: var(--johwgp2l);
}
html._14xpeyw10 ._14xpeyw2o,
html:not(._14xpeyw10) ._14xpeyw2n {
  background: var(--johwgp2m);
}
html._14xpeyw10 ._14xpeyw2q,
html:not(._14xpeyw10) ._14xpeyw2p {
  background: var(--johwgp2n);
}
html._14xpeyw10 ._14xpeyw2s,
html:not(._14xpeyw10) ._14xpeyw2r {
  background: var(--johwgp2o);
}
html._14xpeyw10 ._14xpeyw2u,
html:not(._14xpeyw10) ._14xpeyw2t {
  background: var(--johwgp2p);
}
html._14xpeyw10 ._14xpeyw2w,
html:not(._14xpeyw10) ._14xpeyw2v {
  background: var(--johwgp2q);
}
html._14xpeyw10 ._14xpeyw2y,
html:not(._14xpeyw10) ._14xpeyw2x {
  background: var(--johwgp2r);
}
html._14xpeyw10 ._14xpeyw30,
html:not(._14xpeyw10) ._14xpeyw2z {
  background: var(--johwgp2s);
}
html._14xpeyw10 ._14xpeyw32,
html:not(._14xpeyw10) ._14xpeyw31 {
  background: var(--johwgp2t);
}
html._14xpeyw10 ._14xpeyw34,
html:not(._14xpeyw10) ._14xpeyw33 {
  background: var(--johwgp2u);
}
html._14xpeyw10 ._14xpeyw36,
html:not(._14xpeyw10) ._14xpeyw35 {
  background: var(--johwgp2v);
}
html._14xpeyw10 ._14xpeyw38,
html:not(._14xpeyw10) ._14xpeyw37 {
  box-shadow: var(--johwgp5l);
}
html._14xpeyw10 ._14xpeyw3a,
html:not(._14xpeyw10) ._14xpeyw39 {
  box-shadow: var(--johwgp5m);
}
html._14xpeyw10 ._14xpeyw3c,
html:not(._14xpeyw10) ._14xpeyw3b {
  box-shadow: var(--johwgp5n);
}
html._14xpeyw10 ._14xpeyw3e,
html:not(._14xpeyw10) ._14xpeyw3d {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpf);
}
html._14xpeyw10 ._14xpeyw3g,
html:not(._14xpeyw10) ._14xpeyw3f {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpg);
}
html._14xpeyw10 ._14xpeyw3i,
html:not(._14xpeyw10) ._14xpeyw3h {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpf);
}
html._14xpeyw10 ._14xpeyw3k,
html:not(._14xpeyw10) ._14xpeyw3j {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpg);
}
html._14xpeyw10 ._14xpeyw3m,
html:not(._14xpeyw10) ._14xpeyw3l {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgph);
}
html._14xpeyw10 ._14xpeyw3o,
html:not(._14xpeyw10) ._14xpeyw3n {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpi);
}
html._14xpeyw10 ._14xpeyw3q,
html:not(._14xpeyw10) ._14xpeyw3p {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpj);
}
html._14xpeyw10 ._14xpeyw3s,
html:not(._14xpeyw10) ._14xpeyw3r {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpj);
}
html._14xpeyw10 ._14xpeyw3u,
html:not(._14xpeyw10) ._14xpeyw3t {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpk);
}
html._14xpeyw10 ._14xpeyw3w,
html:not(._14xpeyw10) ._14xpeyw3v {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpk);
}
html._14xpeyw10 ._14xpeyw3y,
html:not(._14xpeyw10) ._14xpeyw3x {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpl);
}
html._14xpeyw10 ._14xpeyw40,
html:not(._14xpeyw10) ._14xpeyw3z {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpn);
}
html._14xpeyw10 ._14xpeyw42,
html:not(._14xpeyw10) ._14xpeyw41 {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpn);
}
html._14xpeyw10 ._14xpeyw44,
html:not(._14xpeyw10) ._14xpeyw43 {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpo);
}
html._14xpeyw10 ._14xpeyw46,
html:not(._14xpeyw10) ._14xpeyw45 {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpo);
}
html._14xpeyw10 ._14xpeyw48,
html:not(._14xpeyw10) ._14xpeyw47 {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpp);
}
html._14xpeyw10 ._14xpeyw4a,
html:not(._14xpeyw10) ._14xpeyw49 {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpq);
}
html._14xpeyw10 ._14xpeyw4c,
html:not(._14xpeyw10) ._14xpeyw4b {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpr);
}
html._14xpeyw10 ._14xpeyw4e,
html:not(._14xpeyw10) ._14xpeyw4d {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgpr);
}
html._14xpeyw10 ._14xpeyw4g,
html:not(._14xpeyw10) ._14xpeyw4f {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgps);
}
html._14xpeyw10 ._14xpeyw4i,
html:not(._14xpeyw10) ._14xpeyw4h {
  box-shadow: inset 0 0 0 var(--johwgpz) var(--johwgps);
}
html._14xpeyw10 ._14xpeyw4k,
html:not(._14xpeyw10) ._14xpeyw4j {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpt);
}
html._14xpeyw10 ._14xpeyw4m,
html:not(._14xpeyw10) ._14xpeyw4l {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpu);
}
html._14xpeyw10 ._14xpeyw4o,
html:not(._14xpeyw10) ._14xpeyw4n {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpv);
}
html._14xpeyw10 ._14xpeyw4q,
html:not(._14xpeyw10) ._14xpeyw4p {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpw);
}
html._14xpeyw10 ._14xpeyw4s,
html:not(._14xpeyw10) ._14xpeyw4r {
  box-shadow: inset 0 0 0 var(--johwgpy) var(--johwgpx);
}
html._14xpeyw10 ._14xpeyw4u,
html:not(._14xpeyw10) ._14xpeyw4t {
  box-shadow: 0 0 0 var(--johwgp10) var(--johwgpm);
}
._14xpeyw4v {
  display: none;
}
._14xpeyw4z {
  display: block;
}
._14xpeyw53 {
  display: inline;
}
._14xpeyw57 {
  display: inline-block;
}
._14xpeyw5b {
  display: flex;
}
._14xpeyw5f {
  position: relative;
}
._14xpeyw5j {
  position: absolute;
}
._14xpeyw5n {
  position: fixed;
}
._14xpeyw5r {
  border-radius: 0;
}
._14xpeyw5v {
  border-radius: 9999px;
}
._14xpeyw5z {
  border-radius: var(--johwgpb);
}
._14xpeyw63 {
  border-radius: var(--johwgpc);
}
._14xpeyw67 {
  border-radius: var(--johwgpd);
}
._14xpeyw6b {
  border-radius: var(--johwgpe);
}
._14xpeyw6f {
  gap: var(--johwgp0);
}
._14xpeyw6j {
  gap: var(--johwgp1);
}
._14xpeyw6n {
  gap: var(--johwgp2);
}
._14xpeyw6r {
  gap: var(--johwgp3);
}
._14xpeyw6v {
  gap: var(--johwgp4);
}
._14xpeyw6z {
  gap: var(--johwgp5);
}
._14xpeyw73 {
  gap: var(--johwgp6);
}
._14xpeyw77 {
  gap: var(--johwgp7);
}
._14xpeyw7b {
  gap: var(--johwgp8);
}
._14xpeyw7f {
  gap: 0;
}
._14xpeyw7j {
  padding-top: var(--johwgp0);
}
._14xpeyw7n {
  padding-top: var(--johwgp1);
}
._14xpeyw7r {
  padding-top: var(--johwgp2);
}
._14xpeyw7v {
  padding-top: var(--johwgp3);
}
._14xpeyw7z {
  padding-top: var(--johwgp4);
}
._14xpeyw83 {
  padding-top: var(--johwgp5);
}
._14xpeyw87 {
  padding-top: var(--johwgp6);
}
._14xpeyw8b {
  padding-top: var(--johwgp7);
}
._14xpeyw8f {
  padding-top: var(--johwgp8);
}
._14xpeyw8j {
  padding-top: 0;
}
._14xpeyw8n {
  padding-bottom: var(--johwgp0);
}
._14xpeyw8r {
  padding-bottom: var(--johwgp1);
}
._14xpeyw8v {
  padding-bottom: var(--johwgp2);
}
._14xpeyw8z {
  padding-bottom: var(--johwgp3);
}
._14xpeyw93 {
  padding-bottom: var(--johwgp4);
}
._14xpeyw97 {
  padding-bottom: var(--johwgp5);
}
._14xpeyw9b {
  padding-bottom: var(--johwgp6);
}
._14xpeyw9f {
  padding-bottom: var(--johwgp7);
}
._14xpeyw9j {
  padding-bottom: var(--johwgp8);
}
._14xpeyw9n {
  padding-bottom: 0;
}
._14xpeyw9r {
  padding-right: var(--johwgp0);
}
._14xpeyw9v {
  padding-right: var(--johwgp1);
}
._14xpeyw9z {
  padding-right: var(--johwgp2);
}
._14xpeywa3 {
  padding-right: var(--johwgp3);
}
._14xpeywa7 {
  padding-right: var(--johwgp4);
}
._14xpeywab {
  padding-right: var(--johwgp5);
}
._14xpeywaf {
  padding-right: var(--johwgp6);
}
._14xpeywaj {
  padding-right: var(--johwgp7);
}
._14xpeywan {
  padding-right: var(--johwgp8);
}
._14xpeywar {
  padding-right: 0;
}
._14xpeywav {
  padding-left: var(--johwgp0);
}
._14xpeywaz {
  padding-left: var(--johwgp1);
}
._14xpeywb3 {
  padding-left: var(--johwgp2);
}
._14xpeywb7 {
  padding-left: var(--johwgp3);
}
._14xpeywbb {
  padding-left: var(--johwgp4);
}
._14xpeywbf {
  padding-left: var(--johwgp5);
}
._14xpeywbj {
  padding-left: var(--johwgp6);
}
._14xpeywbn {
  padding-left: var(--johwgp7);
}
._14xpeywbr {
  padding-left: var(--johwgp8);
}
._14xpeywbv {
  padding-left: 0;
}
._14xpeywbz {
  margin-top: var(--johwgp0);
}
._14xpeywc3 {
  margin-top: var(--johwgp1);
}
._14xpeywc7 {
  margin-top: var(--johwgp2);
}
._14xpeywcb {
  margin-top: var(--johwgp3);
}
._14xpeywcf {
  margin-top: var(--johwgp4);
}
._14xpeywcj {
  margin-top: var(--johwgp5);
}
._14xpeywcn {
  margin-top: var(--johwgp6);
}
._14xpeywcr {
  margin-top: var(--johwgp7);
}
._14xpeywcv {
  margin-top: var(--johwgp8);
}
._14xpeywcz {
  margin-top: 0;
}
._14xpeywd3 {
  margin-bottom: var(--johwgp0);
}
._14xpeywd7 {
  margin-bottom: var(--johwgp1);
}
._14xpeywdb {
  margin-bottom: var(--johwgp2);
}
._14xpeywdf {
  margin-bottom: var(--johwgp3);
}
._14xpeywdj {
  margin-bottom: var(--johwgp4);
}
._14xpeywdn {
  margin-bottom: var(--johwgp5);
}
._14xpeywdr {
  margin-bottom: var(--johwgp6);
}
._14xpeywdv {
  margin-bottom: var(--johwgp7);
}
._14xpeywdz {
  margin-bottom: var(--johwgp8);
}
._14xpeywe3 {
  margin-bottom: 0;
}
._14xpeywe7 {
  margin-right: var(--johwgp0);
}
._14xpeyweb {
  margin-right: var(--johwgp1);
}
._14xpeywef {
  margin-right: var(--johwgp2);
}
._14xpeywej {
  margin-right: var(--johwgp3);
}
._14xpeywen {
  margin-right: var(--johwgp4);
}
._14xpeywer {
  margin-right: var(--johwgp5);
}
._14xpeywev {
  margin-right: var(--johwgp6);
}
._14xpeywez {
  margin-right: var(--johwgp7);
}
._14xpeywf3 {
  margin-right: var(--johwgp8);
}
._14xpeywf7 {
  margin-right: 0;
}
._14xpeywfb {
  margin-left: var(--johwgp0);
}
._14xpeywff {
  margin-left: var(--johwgp1);
}
._14xpeywfj {
  margin-left: var(--johwgp2);
}
._14xpeywfn {
  margin-left: var(--johwgp3);
}
._14xpeywfr {
  margin-left: var(--johwgp4);
}
._14xpeywfv {
  margin-left: var(--johwgp5);
}
._14xpeywfz {
  margin-left: var(--johwgp6);
}
._14xpeywg3 {
  margin-left: var(--johwgp7);
}
._14xpeywg7 {
  margin-left: var(--johwgp8);
}
._14xpeywgb {
  margin-left: 0;
}
._14xpeywgf {
  align-items: flex-start;
}
._14xpeywgj {
  align-items: center;
}
._14xpeywgn {
  align-items: flex-end;
}
._14xpeywgr {
  justify-content: flex-start;
}
._14xpeywgv {
  justify-content: center;
}
._14xpeywgz {
  justify-content: flex-end;
}
._14xpeywh3 {
  justify-content: space-between;
}
._14xpeywh7 {
  flex-direction: row;
}
._14xpeywhb {
  flex-direction: row-reverse;
}
._14xpeywhf {
  flex-direction: column;
}
._14xpeywhj {
  flex-direction: column-reverse;
}
._14xpeywhn {
  flex-wrap: wrap;
}
._14xpeywhr {
  flex-wrap: nowrap;
}
._14xpeywhv {
  flex-shrink: 0;
}
._14xpeywhz {
  flex-grow: 0;
}
._14xpeywi3 {
  flex-grow: 1;
}
._14xpeywi7 {
  text-align: left;
}
._14xpeywib {
  text-align: center;
}
._14xpeywif {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._14xpeyw4w {
    display: none;
  }
  ._14xpeyw50 {
    display: block;
  }
  ._14xpeyw54 {
    display: inline;
  }
  ._14xpeyw58 {
    display: inline-block;
  }
  ._14xpeyw5c {
    display: flex;
  }
  ._14xpeyw5g {
    position: relative;
  }
  ._14xpeyw5k {
    position: absolute;
  }
  ._14xpeyw5o {
    position: fixed;
  }
  ._14xpeyw5s {
    border-radius: 0;
  }
  ._14xpeyw5w {
    border-radius: 9999px;
  }
  ._14xpeyw60 {
    border-radius: var(--johwgpb);
  }
  ._14xpeyw64 {
    border-radius: var(--johwgpc);
  }
  ._14xpeyw68 {
    border-radius: var(--johwgpd);
  }
  ._14xpeyw6c {
    border-radius: var(--johwgpe);
  }
  ._14xpeyw6g {
    gap: var(--johwgp0);
  }
  ._14xpeyw6k {
    gap: var(--johwgp1);
  }
  ._14xpeyw6o {
    gap: var(--johwgp2);
  }
  ._14xpeyw6s {
    gap: var(--johwgp3);
  }
  ._14xpeyw6w {
    gap: var(--johwgp4);
  }
  ._14xpeyw70 {
    gap: var(--johwgp5);
  }
  ._14xpeyw74 {
    gap: var(--johwgp6);
  }
  ._14xpeyw78 {
    gap: var(--johwgp7);
  }
  ._14xpeyw7c {
    gap: var(--johwgp8);
  }
  ._14xpeyw7g {
    gap: 0;
  }
  ._14xpeyw7k {
    padding-top: var(--johwgp0);
  }
  ._14xpeyw7o {
    padding-top: var(--johwgp1);
  }
  ._14xpeyw7s {
    padding-top: var(--johwgp2);
  }
  ._14xpeyw7w {
    padding-top: var(--johwgp3);
  }
  ._14xpeyw80 {
    padding-top: var(--johwgp4);
  }
  ._14xpeyw84 {
    padding-top: var(--johwgp5);
  }
  ._14xpeyw88 {
    padding-top: var(--johwgp6);
  }
  ._14xpeyw8c {
    padding-top: var(--johwgp7);
  }
  ._14xpeyw8g {
    padding-top: var(--johwgp8);
  }
  ._14xpeyw8k {
    padding-top: 0;
  }
  ._14xpeyw8o {
    padding-bottom: var(--johwgp0);
  }
  ._14xpeyw8s {
    padding-bottom: var(--johwgp1);
  }
  ._14xpeyw8w {
    padding-bottom: var(--johwgp2);
  }
  ._14xpeyw90 {
    padding-bottom: var(--johwgp3);
  }
  ._14xpeyw94 {
    padding-bottom: var(--johwgp4);
  }
  ._14xpeyw98 {
    padding-bottom: var(--johwgp5);
  }
  ._14xpeyw9c {
    padding-bottom: var(--johwgp6);
  }
  ._14xpeyw9g {
    padding-bottom: var(--johwgp7);
  }
  ._14xpeyw9k {
    padding-bottom: var(--johwgp8);
  }
  ._14xpeyw9o {
    padding-bottom: 0;
  }
  ._14xpeyw9s {
    padding-right: var(--johwgp0);
  }
  ._14xpeyw9w {
    padding-right: var(--johwgp1);
  }
  ._14xpeywa0 {
    padding-right: var(--johwgp2);
  }
  ._14xpeywa4 {
    padding-right: var(--johwgp3);
  }
  ._14xpeywa8 {
    padding-right: var(--johwgp4);
  }
  ._14xpeywac {
    padding-right: var(--johwgp5);
  }
  ._14xpeywag {
    padding-right: var(--johwgp6);
  }
  ._14xpeywak {
    padding-right: var(--johwgp7);
  }
  ._14xpeywao {
    padding-right: var(--johwgp8);
  }
  ._14xpeywas {
    padding-right: 0;
  }
  ._14xpeywaw {
    padding-left: var(--johwgp0);
  }
  ._14xpeywb0 {
    padding-left: var(--johwgp1);
  }
  ._14xpeywb4 {
    padding-left: var(--johwgp2);
  }
  ._14xpeywb8 {
    padding-left: var(--johwgp3);
  }
  ._14xpeywbc {
    padding-left: var(--johwgp4);
  }
  ._14xpeywbg {
    padding-left: var(--johwgp5);
  }
  ._14xpeywbk {
    padding-left: var(--johwgp6);
  }
  ._14xpeywbo {
    padding-left: var(--johwgp7);
  }
  ._14xpeywbs {
    padding-left: var(--johwgp8);
  }
  ._14xpeywbw {
    padding-left: 0;
  }
  ._14xpeywc0 {
    margin-top: var(--johwgp0);
  }
  ._14xpeywc4 {
    margin-top: var(--johwgp1);
  }
  ._14xpeywc8 {
    margin-top: var(--johwgp2);
  }
  ._14xpeywcc {
    margin-top: var(--johwgp3);
  }
  ._14xpeywcg {
    margin-top: var(--johwgp4);
  }
  ._14xpeywck {
    margin-top: var(--johwgp5);
  }
  ._14xpeywco {
    margin-top: var(--johwgp6);
  }
  ._14xpeywcs {
    margin-top: var(--johwgp7);
  }
  ._14xpeywcw {
    margin-top: var(--johwgp8);
  }
  ._14xpeywd0 {
    margin-top: 0;
  }
  ._14xpeywd4 {
    margin-bottom: var(--johwgp0);
  }
  ._14xpeywd8 {
    margin-bottom: var(--johwgp1);
  }
  ._14xpeywdc {
    margin-bottom: var(--johwgp2);
  }
  ._14xpeywdg {
    margin-bottom: var(--johwgp3);
  }
  ._14xpeywdk {
    margin-bottom: var(--johwgp4);
  }
  ._14xpeywdo {
    margin-bottom: var(--johwgp5);
  }
  ._14xpeywds {
    margin-bottom: var(--johwgp6);
  }
  ._14xpeywdw {
    margin-bottom: var(--johwgp7);
  }
  ._14xpeywe0 {
    margin-bottom: var(--johwgp8);
  }
  ._14xpeywe4 {
    margin-bottom: 0;
  }
  ._14xpeywe8 {
    margin-right: var(--johwgp0);
  }
  ._14xpeywec {
    margin-right: var(--johwgp1);
  }
  ._14xpeyweg {
    margin-right: var(--johwgp2);
  }
  ._14xpeywek {
    margin-right: var(--johwgp3);
  }
  ._14xpeyweo {
    margin-right: var(--johwgp4);
  }
  ._14xpeywes {
    margin-right: var(--johwgp5);
  }
  ._14xpeywew {
    margin-right: var(--johwgp6);
  }
  ._14xpeywf0 {
    margin-right: var(--johwgp7);
  }
  ._14xpeywf4 {
    margin-right: var(--johwgp8);
  }
  ._14xpeywf8 {
    margin-right: 0;
  }
  ._14xpeywfc {
    margin-left: var(--johwgp0);
  }
  ._14xpeywfg {
    margin-left: var(--johwgp1);
  }
  ._14xpeywfk {
    margin-left: var(--johwgp2);
  }
  ._14xpeywfo {
    margin-left: var(--johwgp3);
  }
  ._14xpeywfs {
    margin-left: var(--johwgp4);
  }
  ._14xpeywfw {
    margin-left: var(--johwgp5);
  }
  ._14xpeywg0 {
    margin-left: var(--johwgp6);
  }
  ._14xpeywg4 {
    margin-left: var(--johwgp7);
  }
  ._14xpeywg8 {
    margin-left: var(--johwgp8);
  }
  ._14xpeywgc {
    margin-left: 0;
  }
  ._14xpeywgg {
    align-items: flex-start;
  }
  ._14xpeywgk {
    align-items: center;
  }
  ._14xpeywgo {
    align-items: flex-end;
  }
  ._14xpeywgs {
    justify-content: flex-start;
  }
  ._14xpeywgw {
    justify-content: center;
  }
  ._14xpeywh0 {
    justify-content: flex-end;
  }
  ._14xpeywh4 {
    justify-content: space-between;
  }
  ._14xpeywh8 {
    flex-direction: row;
  }
  ._14xpeywhc {
    flex-direction: row-reverse;
  }
  ._14xpeywhg {
    flex-direction: column;
  }
  ._14xpeywhk {
    flex-direction: column-reverse;
  }
  ._14xpeywho {
    flex-wrap: wrap;
  }
  ._14xpeywhs {
    flex-wrap: nowrap;
  }
  ._14xpeywhw {
    flex-shrink: 0;
  }
  ._14xpeywi0 {
    flex-grow: 0;
  }
  ._14xpeywi4 {
    flex-grow: 1;
  }
  ._14xpeywi8 {
    text-align: left;
  }
  ._14xpeywic {
    text-align: center;
  }
  ._14xpeywig {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._14xpeyw4x {
    display: none;
  }
  ._14xpeyw51 {
    display: block;
  }
  ._14xpeyw55 {
    display: inline;
  }
  ._14xpeyw59 {
    display: inline-block;
  }
  ._14xpeyw5d {
    display: flex;
  }
  ._14xpeyw5h {
    position: relative;
  }
  ._14xpeyw5l {
    position: absolute;
  }
  ._14xpeyw5p {
    position: fixed;
  }
  ._14xpeyw5t {
    border-radius: 0;
  }
  ._14xpeyw5x {
    border-radius: 9999px;
  }
  ._14xpeyw61 {
    border-radius: var(--johwgpb);
  }
  ._14xpeyw65 {
    border-radius: var(--johwgpc);
  }
  ._14xpeyw69 {
    border-radius: var(--johwgpd);
  }
  ._14xpeyw6d {
    border-radius: var(--johwgpe);
  }
  ._14xpeyw6h {
    gap: var(--johwgp0);
  }
  ._14xpeyw6l {
    gap: var(--johwgp1);
  }
  ._14xpeyw6p {
    gap: var(--johwgp2);
  }
  ._14xpeyw6t {
    gap: var(--johwgp3);
  }
  ._14xpeyw6x {
    gap: var(--johwgp4);
  }
  ._14xpeyw71 {
    gap: var(--johwgp5);
  }
  ._14xpeyw75 {
    gap: var(--johwgp6);
  }
  ._14xpeyw79 {
    gap: var(--johwgp7);
  }
  ._14xpeyw7d {
    gap: var(--johwgp8);
  }
  ._14xpeyw7h {
    gap: 0;
  }
  ._14xpeyw7l {
    padding-top: var(--johwgp0);
  }
  ._14xpeyw7p {
    padding-top: var(--johwgp1);
  }
  ._14xpeyw7t {
    padding-top: var(--johwgp2);
  }
  ._14xpeyw7x {
    padding-top: var(--johwgp3);
  }
  ._14xpeyw81 {
    padding-top: var(--johwgp4);
  }
  ._14xpeyw85 {
    padding-top: var(--johwgp5);
  }
  ._14xpeyw89 {
    padding-top: var(--johwgp6);
  }
  ._14xpeyw8d {
    padding-top: var(--johwgp7);
  }
  ._14xpeyw8h {
    padding-top: var(--johwgp8);
  }
  ._14xpeyw8l {
    padding-top: 0;
  }
  ._14xpeyw8p {
    padding-bottom: var(--johwgp0);
  }
  ._14xpeyw8t {
    padding-bottom: var(--johwgp1);
  }
  ._14xpeyw8x {
    padding-bottom: var(--johwgp2);
  }
  ._14xpeyw91 {
    padding-bottom: var(--johwgp3);
  }
  ._14xpeyw95 {
    padding-bottom: var(--johwgp4);
  }
  ._14xpeyw99 {
    padding-bottom: var(--johwgp5);
  }
  ._14xpeyw9d {
    padding-bottom: var(--johwgp6);
  }
  ._14xpeyw9h {
    padding-bottom: var(--johwgp7);
  }
  ._14xpeyw9l {
    padding-bottom: var(--johwgp8);
  }
  ._14xpeyw9p {
    padding-bottom: 0;
  }
  ._14xpeyw9t {
    padding-right: var(--johwgp0);
  }
  ._14xpeyw9x {
    padding-right: var(--johwgp1);
  }
  ._14xpeywa1 {
    padding-right: var(--johwgp2);
  }
  ._14xpeywa5 {
    padding-right: var(--johwgp3);
  }
  ._14xpeywa9 {
    padding-right: var(--johwgp4);
  }
  ._14xpeywad {
    padding-right: var(--johwgp5);
  }
  ._14xpeywah {
    padding-right: var(--johwgp6);
  }
  ._14xpeywal {
    padding-right: var(--johwgp7);
  }
  ._14xpeywap {
    padding-right: var(--johwgp8);
  }
  ._14xpeywat {
    padding-right: 0;
  }
  ._14xpeywax {
    padding-left: var(--johwgp0);
  }
  ._14xpeywb1 {
    padding-left: var(--johwgp1);
  }
  ._14xpeywb5 {
    padding-left: var(--johwgp2);
  }
  ._14xpeywb9 {
    padding-left: var(--johwgp3);
  }
  ._14xpeywbd {
    padding-left: var(--johwgp4);
  }
  ._14xpeywbh {
    padding-left: var(--johwgp5);
  }
  ._14xpeywbl {
    padding-left: var(--johwgp6);
  }
  ._14xpeywbp {
    padding-left: var(--johwgp7);
  }
  ._14xpeywbt {
    padding-left: var(--johwgp8);
  }
  ._14xpeywbx {
    padding-left: 0;
  }
  ._14xpeywc1 {
    margin-top: var(--johwgp0);
  }
  ._14xpeywc5 {
    margin-top: var(--johwgp1);
  }
  ._14xpeywc9 {
    margin-top: var(--johwgp2);
  }
  ._14xpeywcd {
    margin-top: var(--johwgp3);
  }
  ._14xpeywch {
    margin-top: var(--johwgp4);
  }
  ._14xpeywcl {
    margin-top: var(--johwgp5);
  }
  ._14xpeywcp {
    margin-top: var(--johwgp6);
  }
  ._14xpeywct {
    margin-top: var(--johwgp7);
  }
  ._14xpeywcx {
    margin-top: var(--johwgp8);
  }
  ._14xpeywd1 {
    margin-top: 0;
  }
  ._14xpeywd5 {
    margin-bottom: var(--johwgp0);
  }
  ._14xpeywd9 {
    margin-bottom: var(--johwgp1);
  }
  ._14xpeywdd {
    margin-bottom: var(--johwgp2);
  }
  ._14xpeywdh {
    margin-bottom: var(--johwgp3);
  }
  ._14xpeywdl {
    margin-bottom: var(--johwgp4);
  }
  ._14xpeywdp {
    margin-bottom: var(--johwgp5);
  }
  ._14xpeywdt {
    margin-bottom: var(--johwgp6);
  }
  ._14xpeywdx {
    margin-bottom: var(--johwgp7);
  }
  ._14xpeywe1 {
    margin-bottom: var(--johwgp8);
  }
  ._14xpeywe5 {
    margin-bottom: 0;
  }
  ._14xpeywe9 {
    margin-right: var(--johwgp0);
  }
  ._14xpeywed {
    margin-right: var(--johwgp1);
  }
  ._14xpeyweh {
    margin-right: var(--johwgp2);
  }
  ._14xpeywel {
    margin-right: var(--johwgp3);
  }
  ._14xpeywep {
    margin-right: var(--johwgp4);
  }
  ._14xpeywet {
    margin-right: var(--johwgp5);
  }
  ._14xpeywex {
    margin-right: var(--johwgp6);
  }
  ._14xpeywf1 {
    margin-right: var(--johwgp7);
  }
  ._14xpeywf5 {
    margin-right: var(--johwgp8);
  }
  ._14xpeywf9 {
    margin-right: 0;
  }
  ._14xpeywfd {
    margin-left: var(--johwgp0);
  }
  ._14xpeywfh {
    margin-left: var(--johwgp1);
  }
  ._14xpeywfl {
    margin-left: var(--johwgp2);
  }
  ._14xpeywfp {
    margin-left: var(--johwgp3);
  }
  ._14xpeywft {
    margin-left: var(--johwgp4);
  }
  ._14xpeywfx {
    margin-left: var(--johwgp5);
  }
  ._14xpeywg1 {
    margin-left: var(--johwgp6);
  }
  ._14xpeywg5 {
    margin-left: var(--johwgp7);
  }
  ._14xpeywg9 {
    margin-left: var(--johwgp8);
  }
  ._14xpeywgd {
    margin-left: 0;
  }
  ._14xpeywgh {
    align-items: flex-start;
  }
  ._14xpeywgl {
    align-items: center;
  }
  ._14xpeywgp {
    align-items: flex-end;
  }
  ._14xpeywgt {
    justify-content: flex-start;
  }
  ._14xpeywgx {
    justify-content: center;
  }
  ._14xpeywh1 {
    justify-content: flex-end;
  }
  ._14xpeywh5 {
    justify-content: space-between;
  }
  ._14xpeywh9 {
    flex-direction: row;
  }
  ._14xpeywhd {
    flex-direction: row-reverse;
  }
  ._14xpeywhh {
    flex-direction: column;
  }
  ._14xpeywhl {
    flex-direction: column-reverse;
  }
  ._14xpeywhp {
    flex-wrap: wrap;
  }
  ._14xpeywht {
    flex-wrap: nowrap;
  }
  ._14xpeywhx {
    flex-shrink: 0;
  }
  ._14xpeywi1 {
    flex-grow: 0;
  }
  ._14xpeywi5 {
    flex-grow: 1;
  }
  ._14xpeywi9 {
    text-align: left;
  }
  ._14xpeywid {
    text-align: center;
  }
  ._14xpeywih {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._14xpeyw4y {
    display: none;
  }
  ._14xpeyw52 {
    display: block;
  }
  ._14xpeyw56 {
    display: inline;
  }
  ._14xpeyw5a {
    display: inline-block;
  }
  ._14xpeyw5e {
    display: flex;
  }
  ._14xpeyw5i {
    position: relative;
  }
  ._14xpeyw5m {
    position: absolute;
  }
  ._14xpeyw5q {
    position: fixed;
  }
  ._14xpeyw5u {
    border-radius: 0;
  }
  ._14xpeyw5y {
    border-radius: 9999px;
  }
  ._14xpeyw62 {
    border-radius: var(--johwgpb);
  }
  ._14xpeyw66 {
    border-radius: var(--johwgpc);
  }
  ._14xpeyw6a {
    border-radius: var(--johwgpd);
  }
  ._14xpeyw6e {
    border-radius: var(--johwgpe);
  }
  ._14xpeyw6i {
    gap: var(--johwgp0);
  }
  ._14xpeyw6m {
    gap: var(--johwgp1);
  }
  ._14xpeyw6q {
    gap: var(--johwgp2);
  }
  ._14xpeyw6u {
    gap: var(--johwgp3);
  }
  ._14xpeyw6y {
    gap: var(--johwgp4);
  }
  ._14xpeyw72 {
    gap: var(--johwgp5);
  }
  ._14xpeyw76 {
    gap: var(--johwgp6);
  }
  ._14xpeyw7a {
    gap: var(--johwgp7);
  }
  ._14xpeyw7e {
    gap: var(--johwgp8);
  }
  ._14xpeyw7i {
    gap: 0;
  }
  ._14xpeyw7m {
    padding-top: var(--johwgp0);
  }
  ._14xpeyw7q {
    padding-top: var(--johwgp1);
  }
  ._14xpeyw7u {
    padding-top: var(--johwgp2);
  }
  ._14xpeyw7y {
    padding-top: var(--johwgp3);
  }
  ._14xpeyw82 {
    padding-top: var(--johwgp4);
  }
  ._14xpeyw86 {
    padding-top: var(--johwgp5);
  }
  ._14xpeyw8a {
    padding-top: var(--johwgp6);
  }
  ._14xpeyw8e {
    padding-top: var(--johwgp7);
  }
  ._14xpeyw8i {
    padding-top: var(--johwgp8);
  }
  ._14xpeyw8m {
    padding-top: 0;
  }
  ._14xpeyw8q {
    padding-bottom: var(--johwgp0);
  }
  ._14xpeyw8u {
    padding-bottom: var(--johwgp1);
  }
  ._14xpeyw8y {
    padding-bottom: var(--johwgp2);
  }
  ._14xpeyw92 {
    padding-bottom: var(--johwgp3);
  }
  ._14xpeyw96 {
    padding-bottom: var(--johwgp4);
  }
  ._14xpeyw9a {
    padding-bottom: var(--johwgp5);
  }
  ._14xpeyw9e {
    padding-bottom: var(--johwgp6);
  }
  ._14xpeyw9i {
    padding-bottom: var(--johwgp7);
  }
  ._14xpeyw9m {
    padding-bottom: var(--johwgp8);
  }
  ._14xpeyw9q {
    padding-bottom: 0;
  }
  ._14xpeyw9u {
    padding-right: var(--johwgp0);
  }
  ._14xpeyw9y {
    padding-right: var(--johwgp1);
  }
  ._14xpeywa2 {
    padding-right: var(--johwgp2);
  }
  ._14xpeywa6 {
    padding-right: var(--johwgp3);
  }
  ._14xpeywaa {
    padding-right: var(--johwgp4);
  }
  ._14xpeywae {
    padding-right: var(--johwgp5);
  }
  ._14xpeywai {
    padding-right: var(--johwgp6);
  }
  ._14xpeywam {
    padding-right: var(--johwgp7);
  }
  ._14xpeywaq {
    padding-right: var(--johwgp8);
  }
  ._14xpeywau {
    padding-right: 0;
  }
  ._14xpeyway {
    padding-left: var(--johwgp0);
  }
  ._14xpeywb2 {
    padding-left: var(--johwgp1);
  }
  ._14xpeywb6 {
    padding-left: var(--johwgp2);
  }
  ._14xpeywba {
    padding-left: var(--johwgp3);
  }
  ._14xpeywbe {
    padding-left: var(--johwgp4);
  }
  ._14xpeywbi {
    padding-left: var(--johwgp5);
  }
  ._14xpeywbm {
    padding-left: var(--johwgp6);
  }
  ._14xpeywbq {
    padding-left: var(--johwgp7);
  }
  ._14xpeywbu {
    padding-left: var(--johwgp8);
  }
  ._14xpeywby {
    padding-left: 0;
  }
  ._14xpeywc2 {
    margin-top: var(--johwgp0);
  }
  ._14xpeywc6 {
    margin-top: var(--johwgp1);
  }
  ._14xpeywca {
    margin-top: var(--johwgp2);
  }
  ._14xpeywce {
    margin-top: var(--johwgp3);
  }
  ._14xpeywci {
    margin-top: var(--johwgp4);
  }
  ._14xpeywcm {
    margin-top: var(--johwgp5);
  }
  ._14xpeywcq {
    margin-top: var(--johwgp6);
  }
  ._14xpeywcu {
    margin-top: var(--johwgp7);
  }
  ._14xpeywcy {
    margin-top: var(--johwgp8);
  }
  ._14xpeywd2 {
    margin-top: 0;
  }
  ._14xpeywd6 {
    margin-bottom: var(--johwgp0);
  }
  ._14xpeywda {
    margin-bottom: var(--johwgp1);
  }
  ._14xpeywde {
    margin-bottom: var(--johwgp2);
  }
  ._14xpeywdi {
    margin-bottom: var(--johwgp3);
  }
  ._14xpeywdm {
    margin-bottom: var(--johwgp4);
  }
  ._14xpeywdq {
    margin-bottom: var(--johwgp5);
  }
  ._14xpeywdu {
    margin-bottom: var(--johwgp6);
  }
  ._14xpeywdy {
    margin-bottom: var(--johwgp7);
  }
  ._14xpeywe2 {
    margin-bottom: var(--johwgp8);
  }
  ._14xpeywe6 {
    margin-bottom: 0;
  }
  ._14xpeywea {
    margin-right: var(--johwgp0);
  }
  ._14xpeywee {
    margin-right: var(--johwgp1);
  }
  ._14xpeywei {
    margin-right: var(--johwgp2);
  }
  ._14xpeywem {
    margin-right: var(--johwgp3);
  }
  ._14xpeyweq {
    margin-right: var(--johwgp4);
  }
  ._14xpeyweu {
    margin-right: var(--johwgp5);
  }
  ._14xpeywey {
    margin-right: var(--johwgp6);
  }
  ._14xpeywf2 {
    margin-right: var(--johwgp7);
  }
  ._14xpeywf6 {
    margin-right: var(--johwgp8);
  }
  ._14xpeywfa {
    margin-right: 0;
  }
  ._14xpeywfe {
    margin-left: var(--johwgp0);
  }
  ._14xpeywfi {
    margin-left: var(--johwgp1);
  }
  ._14xpeywfm {
    margin-left: var(--johwgp2);
  }
  ._14xpeywfq {
    margin-left: var(--johwgp3);
  }
  ._14xpeywfu {
    margin-left: var(--johwgp4);
  }
  ._14xpeywfy {
    margin-left: var(--johwgp5);
  }
  ._14xpeywg2 {
    margin-left: var(--johwgp6);
  }
  ._14xpeywg6 {
    margin-left: var(--johwgp7);
  }
  ._14xpeywga {
    margin-left: var(--johwgp8);
  }
  ._14xpeywge {
    margin-left: 0;
  }
  ._14xpeywgi {
    align-items: flex-start;
  }
  ._14xpeywgm {
    align-items: center;
  }
  ._14xpeywgq {
    align-items: flex-end;
  }
  ._14xpeywgu {
    justify-content: flex-start;
  }
  ._14xpeywgy {
    justify-content: center;
  }
  ._14xpeywh2 {
    justify-content: flex-end;
  }
  ._14xpeywh6 {
    justify-content: space-between;
  }
  ._14xpeywha {
    flex-direction: row;
  }
  ._14xpeywhe {
    flex-direction: row-reverse;
  }
  ._14xpeywhi {
    flex-direction: column;
  }
  ._14xpeywhm {
    flex-direction: column-reverse;
  }
  ._14xpeywhq {
    flex-wrap: wrap;
  }
  ._14xpeywhu {
    flex-wrap: nowrap;
  }
  ._14xpeywhy {
    flex-shrink: 0;
  }
  ._14xpeywi2 {
    flex-grow: 0;
  }
  ._14xpeywi6 {
    flex-grow: 1;
  }
  ._14xpeywia {
    text-align: left;
  }
  ._14xpeywie {
    text-align: center;
  }
  ._14xpeywii {
    text-align: right;
  }
}
._1omdrsc4 {
  font-size: var(--_1omdrsc0);
  line-height: var(--_1omdrsc1);
}
._1omdrsc4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1omdrsc2);
}
._1omdrsc4:after {
  content: "";
  display: table;
  margin-top: var(--_1omdrsc3);
}
._1ix0i1h0 {
  font-family: var(--johwgp2w);
}
._1ix0i1h1 {
  font-weight: var(--johwgp46);
}
._1ix0i1h2 {
  font-weight: var(--johwgp47);
}
._1ix0i1h3 {
  font-weight: var(--johwgp48);
}
._1ix0i1h4 {
  --_1omdrsc0: var(--johwgp32);
  --_1omdrsc1: var(--johwgp33);
  --_1omdrsc2: var(--johwgp35);
  --_1omdrsc3: var(--johwgp36);
}
._1ix0i1h7 {
  --_1omdrsc0: var(--johwgp3c);
  --_1omdrsc1: var(--johwgp3d);
  --_1omdrsc2: var(--johwgp3f);
  --_1omdrsc3: var(--johwgp3g);
}
._1ix0i1ha {
  --_1omdrsc0: var(--johwgp3m);
  --_1omdrsc1: var(--johwgp3n);
  --_1omdrsc2: var(--johwgp3p);
  --_1omdrsc3: var(--johwgp3q);
}
._1ix0i1hd {
  --_1omdrsc0: var(--johwgp3w);
  --_1omdrsc1: var(--johwgp3x);
  --_1omdrsc2: var(--johwgp3z);
  --_1omdrsc3: var(--johwgp40);
}
._1ix0i1hg {
  font-size: var(--johwgp32);
  line-height: var(--johwgp33);
}
._1ix0i1hh {
  font-size: var(--johwgp3c);
  line-height: var(--johwgp3d);
}
._1ix0i1hi {
  font-size: var(--johwgp3m);
  line-height: var(--johwgp3n);
}
._1ix0i1hj {
  font-size: var(--johwgp3w);
  line-height: var(--johwgp3x);
}
._1ix0i1hk {
  font-weight: var(--johwgp5d);
}
._1ix0i1hl {
  font-weight: var(--johwgp5e);
}
._1ix0i1hm {
  --_1omdrsc0: var(--johwgp49);
  --_1omdrsc1: var(--johwgp4a);
  --_1omdrsc2: var(--johwgp4c);
  --_1omdrsc3: var(--johwgp4d);
}
._1ix0i1hp {
  --_1omdrsc0: var(--johwgp4j);
  --_1omdrsc1: var(--johwgp4k);
  --_1omdrsc2: var(--johwgp4m);
  --_1omdrsc3: var(--johwgp4n);
}
._1ix0i1hs {
  --_1omdrsc0: var(--johwgp4t);
  --_1omdrsc1: var(--johwgp4u);
  --_1omdrsc2: var(--johwgp4w);
  --_1omdrsc3: var(--johwgp4x);
}
._1ix0i1hv {
  --_1omdrsc0: var(--johwgp53);
  --_1omdrsc1: var(--johwgp54);
  --_1omdrsc2: var(--johwgp56);
  --_1omdrsc3: var(--johwgp57);
}
html:not(._14xpeyw10) ._1ix0i1h18 {
  --_1ix0i1hy: var(--johwgp19);
  --_1ix0i1hz: var(--johwgp17);
  --_1ix0i1h10: var(--johwgp1d);
  --_1ix0i1h11: var(--johwgp1o);
  --_1ix0i1h12: var(--johwgp1m);
  --_1ix0i1h13: var(--johwgp15);
  --_1ix0i1h14: var(--johwgp1b);
  --_1ix0i1h15: var(--johwgp1k);
  --_1ix0i1h16: var(--johwgp1r);
  --_1ix0i1h17: var(--johwgp1f);
}
html:not(._14xpeyw10) ._1ix0i1h19 {
  --_1ix0i1hy: var(--johwgp1a);
  --_1ix0i1hz: var(--johwgp18);
  --_1ix0i1h10: var(--johwgp1e);
  --_1ix0i1h11: var(--johwgp1p);
  --_1ix0i1h12: var(--johwgp1n);
  --_1ix0i1h13: var(--johwgp16);
  --_1ix0i1h14: var(--johwgp1c);
  --_1ix0i1h15: var(--johwgp1l);
  --_1ix0i1h16: var(--johwgp1s);
  --_1ix0i1h17: var(--johwgp1h);
}
html._14xpeyw10 ._1ix0i1h1a {
  --_1ix0i1hy: var(--johwgp19);
  --_1ix0i1hz: var(--johwgp17);
  --_1ix0i1h10: var(--johwgp1d);
  --_1ix0i1h11: var(--johwgp1o);
  --_1ix0i1h12: var(--johwgp1m);
  --_1ix0i1h13: var(--johwgp15);
  --_1ix0i1h14: var(--johwgp1b);
  --_1ix0i1h15: var(--johwgp1k);
  --_1ix0i1h16: var(--johwgp1r);
  --_1ix0i1h17: var(--johwgp1f);
}
html._14xpeyw10 ._1ix0i1h1b {
  --_1ix0i1hy: var(--johwgp1a);
  --_1ix0i1hz: var(--johwgp18);
  --_1ix0i1h10: var(--johwgp1e);
  --_1ix0i1h11: var(--johwgp1p);
  --_1ix0i1h12: var(--johwgp1n);
  --_1ix0i1h13: var(--johwgp16);
  --_1ix0i1h14: var(--johwgp1c);
  --_1ix0i1h15: var(--johwgp1l);
  --_1ix0i1h16: var(--johwgp1s);
  --_1ix0i1h17: var(--johwgp1h);
}
html:not(._14xpeyw10) ._1ix0i1h1c,
html:not(._14xpeyw10) ._1ix0i1h1d,
html:not(._14xpeyw10) ._1ix0i1h1e,
html:not(._14xpeyw10) ._1ix0i1h1f {
  --_1ix0i1h15: var(--_1ix0i1hy);
}
html:not(._14xpeyw10) ._1ix0i1h1g,
html:not(._14xpeyw10) ._1ix0i1h1h {
  --_1ix0i1h15: var(--_1ix0i1hz);
}
html:not(._14xpeyw10) ._1ix0i1h1i {
  --_1ix0i1h15: var(--_1ix0i1h12);
}
html:not(._14xpeyw10) ._1ix0i1h1j {
  --_1ix0i1h15: var(--_1ix0i1h10);
}
html:not(._14xpeyw10) ._1ix0i1h1k {
  --_1ix0i1h15: var(--_1ix0i1h11);
}
html._14xpeyw10 ._1ix0i1h1l,
html._14xpeyw10 ._1ix0i1h1m,
html._14xpeyw10 ._1ix0i1h1n,
html._14xpeyw10 ._1ix0i1h1o {
  --_1ix0i1h15: var(--_1ix0i1hy);
}
html._14xpeyw10 ._1ix0i1h1p,
html._14xpeyw10 ._1ix0i1h1q {
  --_1ix0i1h15: var(--_1ix0i1hz);
}
html._14xpeyw10 ._1ix0i1h1r {
  --_1ix0i1h15: var(--_1ix0i1h12);
}
html._14xpeyw10 ._1ix0i1h1s {
  --_1ix0i1h15: var(--_1ix0i1h10);
}
html._14xpeyw10 ._1ix0i1h1t {
  --_1ix0i1h15: var(--_1ix0i1h11);
}
._1ix0i1h1u {
  color: var(--_1ix0i1hy);
}
._1ix0i1h1v {
  color: var(--_1ix0i1hz);
}
._1ix0i1h1w {
  color: var(--_1ix0i1h10);
}
._1ix0i1h1x {
  color: var(--_1ix0i1h11);
}
._1ix0i1h1y {
  color: var(--_1ix0i1h12);
}
._1ix0i1h1z {
  color: var(--_1ix0i1h13);
}
._1ix0i1h20 {
  color: var(--_1ix0i1h14);
}
._1ix0i1h21 {
  color: var(--_1ix0i1h15);
}
._1ix0i1h22 {
  color: var(--_1ix0i1h16);
}
._1ix0i1h23 {
  color: var(--_1ix0i1h17);
}
._1ix0i1h24 {
  padding-bottom: calc((var(--johwgp9) - var(--johwgp33)) / 2);
  padding-top: calc((var(--johwgp9) - var(--johwgp33)) / 2);
}
._1ix0i1h25 {
  padding-bottom: calc((var(--johwgp9) - var(--johwgp3d)) / 2);
  padding-top: calc((var(--johwgp9) - var(--johwgp3d)) / 2);
}
._1ix0i1h26 {
  padding-bottom: calc((var(--johwgp9) - var(--johwgp3n)) / 2);
  padding-top: calc((var(--johwgp9) - var(--johwgp3n)) / 2);
}
._1ix0i1h27 {
  padding-bottom: calc((var(--johwgp9) - var(--johwgp3x)) / 2);
  padding-top: calc((var(--johwgp9) - var(--johwgp3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1ix0i1h4 {
    --_1omdrsc0: var(--johwgp37);
    --_1omdrsc1: var(--johwgp38);
    --_1omdrsc2: var(--johwgp3a);
    --_1omdrsc3: var(--johwgp3b);
  }
  ._1ix0i1h7 {
    --_1omdrsc0: var(--johwgp3h);
    --_1omdrsc1: var(--johwgp3i);
    --_1omdrsc2: var(--johwgp3k);
    --_1omdrsc3: var(--johwgp3l);
  }
  ._1ix0i1ha {
    --_1omdrsc0: var(--johwgp3r);
    --_1omdrsc1: var(--johwgp3s);
    --_1omdrsc2: var(--johwgp3u);
    --_1omdrsc3: var(--johwgp3v);
  }
  ._1ix0i1hd {
    --_1omdrsc0: var(--johwgp41);
    --_1omdrsc1: var(--johwgp42);
    --_1omdrsc2: var(--johwgp44);
    --_1omdrsc3: var(--johwgp45);
  }
  ._1ix0i1hg {
    font-size: var(--johwgp37);
    line-height: var(--johwgp38);
  }
  ._1ix0i1hh {
    font-size: var(--johwgp3h);
    line-height: var(--johwgp3i);
  }
  ._1ix0i1hi {
    font-size: var(--johwgp3r);
    line-height: var(--johwgp3s);
  }
  ._1ix0i1hj {
    font-size: var(--johwgp41);
    line-height: var(--johwgp42);
  }
  ._1ix0i1hm {
    --_1omdrsc0: var(--johwgp4e);
    --_1omdrsc1: var(--johwgp4f);
    --_1omdrsc2: var(--johwgp4h);
    --_1omdrsc3: var(--johwgp4i);
  }
  ._1ix0i1hp {
    --_1omdrsc0: var(--johwgp4o);
    --_1omdrsc1: var(--johwgp4p);
    --_1omdrsc2: var(--johwgp4r);
    --_1omdrsc3: var(--johwgp4s);
  }
  ._1ix0i1hs {
    --_1omdrsc0: var(--johwgp4y);
    --_1omdrsc1: var(--johwgp4z);
    --_1omdrsc2: var(--johwgp51);
    --_1omdrsc3: var(--johwgp52);
  }
  ._1ix0i1hv {
    --_1omdrsc0: var(--johwgp58);
    --_1omdrsc1: var(--johwgp59);
    --_1omdrsc2: var(--johwgp5b);
    --_1omdrsc3: var(--johwgp5c);
  }
  ._1ix0i1h24 {
    padding-bottom: calc((var(--johwgp9) - var(--johwgp38)) / 2);
    padding-top: calc((var(--johwgp9) - var(--johwgp38)) / 2);
  }
  ._1ix0i1h25 {
    padding-bottom: calc((var(--johwgp9) - var(--johwgp3i)) / 2);
    padding-top: calc((var(--johwgp9) - var(--johwgp3i)) / 2);
  }
  ._1ix0i1h26 {
    padding-bottom: calc((var(--johwgp9) - var(--johwgp3s)) / 2);
    padding-top: calc((var(--johwgp9) - var(--johwgp3s)) / 2);
  }
  ._1ix0i1h27 {
    padding-bottom: calc((var(--johwgp9) - var(--johwgp42)) / 2);
    padding-top: calc((var(--johwgp9) - var(--johwgp42)) / 2);
  }
}
._1h2wcql0 {
  --johwgp0: 24px;
  --johwgp1: 8px;
  --johwgp2: 12px;
  --johwgp3: 16px;
  --johwgp4: 24px;
  --johwgp5: 32px;
  --johwgp6: 48px;
  --johwgp7: 64px;
  --johwgp8: 96px;
  --johwgp9: 48px;
  --johwgpa: 4px;
  --johwgpb: 4px;
  --johwgpc: 8px;
  --johwgpd: 16px;
  --johwgpe: 24px;
  --johwgpf: #e60278;
  --johwgpg: #f8b1dc;
  --johwgph: #fdc221;
  --johwgpi: #fee384;
  --johwgpj: #b91e1e;
  --johwgpk: #fb999a;
  --johwgpl: #838fa5;
  --johwgpm: rgba(153, 191, 247, 0.7);
  --johwgpn: #1e47a9;
  --johwgpo: #99bff7;
  --johwgpp: #1d559d;
  --johwgpq: #98c9f1;
  --johwgpr: #2e3849;
  --johwgpt: #eaecf1;
  --johwgps: #fff;
  --johwgpu: #12784f;
  --johwgpv: #8bdec5;
  --johwgpw: #7f35a9;
  --johwgpx: #e1b2f5;
  --johwgpy: 2px;
  --johwgpz: 4px;
  --johwgp10: 6px;
  --johwgp11: 400px;
  --johwgp12: 660px;
  --johwgp13: 940px;
  --johwgp14: 1280px;
  --johwgp15: #e60278;
  --johwgp16: #f8b1dc;
  --johwgp17: #723d02;
  --johwgp18: #fee384;
  --johwgp19: #b91e1e;
  --johwgp1a: #fb999a;
  --johwgp1b: #1e47a9;
  --johwgp1c: #99bff7;
  --johwgp1d: #1d559d;
  --johwgp1e: #98c9f1;
  --johwgp1f: #2e3849;
  --johwgp1h: #fff;
  --johwgp1g: #2e3849;
  --johwgp1i: #5b2084;
  --johwgp1j: #f0d6fa;
  --johwgp1k: #2e3849;
  --johwgp1l: #fff;
  --johwgp1m: #12784f;
  --johwgp1n: #8bdec5;
  --johwgp1o: #7f35a9;
  --johwgp1p: #e1b2f5;
  --johwgp1q: #e60278;
  --johwgp1r: #5a6881;
  --johwgp1s: hsla(0, 0%, 100%, 0.65);
  --johwgp1t: #fff;
  --johwgp1u: #1c2330;
  --johwgp1v: #051a49;
  --johwgp1w: #e60278;
  --johwgp1x: #cd026b;
  --johwgp1y: #fd0585;
  --johwgp1z: #feeffa;
  --johwgp20: #fdd7f3;
  --johwgp21: #fde3f6;
  --johwgp22: #fdc221;
  --johwgp23: #fef8de;
  --johwgp24: #b91e1e;
  --johwgp25: #a31a1a;
  --johwgp26: #db1616;
  --johwgp27: #ffe3e2;
  --johwgp28: #fef3f3;
  --johwgp29: #fcdbdb;
  --johwgp2a: #fde7e7;
  --johwgp2b: #1e47a9;
  --johwgp2c: #1a3e93;
  --johwgp2d: #2455c9;
  --johwgp2e: #f0f7fe;
  --johwgp2f: #d8eafc;
  --johwgp2g: #e4f1fd;
  --johwgp2h: #1d559d;
  --johwgp2i: #e3f2fb;
  --johwgp2j: #2e3849;
  --johwgp2k: #242c39;
  --johwgp2l: #384459;
  --johwgp2m: #f3f5f7;
  --johwgp2n: #f3f5f7;
  --johwgp2o: #e4e8ed;
  --johwgp2p: #ebeff2;
  --johwgp2q: #12784f;
  --johwgp2r: #e2f7f1;
  --johwgp2s: #7f35a9;
  --johwgp2t: #f9ebfd;
  --johwgp2u: #fff;
  --johwgp2v: #1c2330;
  --johwgp2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --johwgp2x: 783;
  --johwgp2y: 1057;
  --johwgp2z: -274;
  --johwgp30: 0;
  --johwgp31: 1000;
  --johwgp32: 12px;
  --johwgp33: 18.396px;
  --johwgp34: 9.396px;
  --johwgp35: -0.375em;
  --johwgp36: -0.375em;
  --johwgp37: 12px;
  --johwgp38: 18.396px;
  --johwgp39: 9.396px;
  --johwgp3a: -0.375em;
  --johwgp3b: -0.375em;
  --johwgp3c: 14px;
  --johwgp3d: 20.962px;
  --johwgp3e: 10.962px;
  --johwgp3f: -0.3571em;
  --johwgp3g: -0.3571em;
  --johwgp3h: 14px;
  --johwgp3i: 20.962px;
  --johwgp3j: 10.962px;
  --johwgp3k: -0.3571em;
  --johwgp3l: -0.3571em;
  --johwgp3m: 16px;
  --johwgp3n: 24.528px;
  --johwgp3o: 12.528px;
  --johwgp3p: -0.375em;
  --johwgp3q: -0.375em;
  --johwgp3r: 16px;
  --johwgp3s: 24.528px;
  --johwgp3t: 12.528px;
  --johwgp3u: -0.375em;
  --johwgp3v: -0.375em;
  --johwgp3w: 18px;
  --johwgp3x: 27.094px;
  --johwgp3y: 14.094px;
  --johwgp3z: -0.3611em;
  --johwgp40: -0.3611em;
  --johwgp41: 18px;
  --johwgp42: 27.094px;
  --johwgp43: 14.094px;
  --johwgp44: -0.3611em;
  --johwgp45: -0.3611em;
  --johwgp46: 400;
  --johwgp47: 500;
  --johwgp48: 700;
  --johwgp49: 28px;
  --johwgp4a: 32.924px;
  --johwgp4b: 21.924px;
  --johwgp4c: -0.1964em;
  --johwgp4d: -0.1964em;
  --johwgp4e: 36px;
  --johwgp4f: 42.188px;
  --johwgp4g: 28.188px;
  --johwgp4h: -0.1944em;
  --johwgp4i: -0.1944em;
  --johwgp4j: 24px;
  --johwgp4k: 29.792px;
  --johwgp4l: 18.792px;
  --johwgp4m: -0.2292em;
  --johwgp4n: -0.2292em;
  --johwgp4o: 30px;
  --johwgp4p: 36.49px;
  --johwgp4q: 23.49px;
  --johwgp4r: -0.2167em;
  --johwgp4s: -0.2167em;
  --johwgp4t: 22px;
  --johwgp4u: 27.226px;
  --johwgp4v: 17.226px;
  --johwgp4w: -0.2273em;
  --johwgp4x: -0.2273em;
  --johwgp4y: 24px;
  --johwgp4z: 29.792px;
  --johwgp50: 18.792px;
  --johwgp51: -0.2292em;
  --johwgp52: -0.2292em;
  --johwgp53: 20px;
  --johwgp54: 24.66px;
  --johwgp55: 15.66px;
  --johwgp56: -0.225em;
  --johwgp57: -0.225em;
  --johwgp58: 20px;
  --johwgp59: 24.66px;
  --johwgp5a: 15.66px;
  --johwgp5b: -0.225em;
  --johwgp5c: -0.225em;
  --johwgp5d: 400;
  --johwgp5e: 500;
  --johwgp5f: underline;
  --johwgp5g: 24px;
  --johwgp5h: 20px;
  --johwgp5i: transform 0.125s ease, opacity 0.125s ease;
  --johwgp5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --johwgp5k: scale(0.95);
  --johwgp5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --johwgp5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --johwgp5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._9jl47n6 {
  background: var(--_9jl47n0);
}
._9jl47n7 {
  background: var(--_9jl47n1);
}
._9jl47n8 {
  background: var(--_9jl47n2);
}
._9jl47n9 {
  background: var(--_9jl47n3);
}
._9jl47na {
  background: var(--_9jl47n4);
}
._9jl47nb {
  background: var(--_9jl47n5);
}
html:not(._14xpeyw10) ._9jl47nc {
  --_9jl47n0: var(--johwgpw);
  --_9jl47n1: var(--johwgpp);
  --_9jl47n2: var(--johwgpu);
  --_9jl47n3: var(--johwgph);
  --_9jl47n4: var(--johwgpj);
  --_9jl47n5: var(--johwgpn);
}
html:not(._14xpeyw10) ._9jl47nd {
  --_9jl47n0: var(--johwgpx);
  --_9jl47n1: var(--johwgpq);
  --_9jl47n2: var(--johwgpv);
  --_9jl47n3: var(--johwgpi);
  --_9jl47n4: var(--johwgpk);
  --_9jl47n5: var(--johwgpo);
}
html._14xpeyw10 ._9jl47ne {
  --_9jl47n0: var(--johwgpw);
  --_9jl47n1: var(--johwgpp);
  --_9jl47n2: var(--johwgpu);
  --_9jl47n3: var(--johwgph);
  --_9jl47n4: var(--johwgpj);
  --_9jl47n5: var(--johwgpn);
}
html._14xpeyw10 ._9jl47nf {
  --_9jl47n0: var(--johwgpx);
  --_9jl47n1: var(--johwgpq);
  --_9jl47n2: var(--johwgpv);
  --_9jl47n3: var(--johwgpi);
  --_9jl47n4: var(--johwgpk);
  --_9jl47n5: var(--johwgpo);
}
._9jl47ng {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._9jl47nh {
  width: var(--johwgpe);
}
._9jl47ni {
  width: var(--johwgpa);
}
._1hvt3660 {
  margin-bottom: -0.1em;
}
._1hvt3662 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1hvt3660 ._1hvt3662 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1hvt3664 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1hvt3663);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__14xpeyw10,html.sprinkles_darkMode__14xpeyw10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1h2wcql0 typography_lightModeTone_light__1ix0i1h18 typography_darkModeTone_dark__1ix0i1h1b">
+        <div class="reset_base__wwc2gv0 sprinkles_paddingBottom_gutter_mobile__14xpeyw8n sprinkles_paddingTop_gutter_mobile__14xpeyw7j sprinkles_paddingLeft_gutter_mobile__14xpeywav sprinkles_paddingRight_gutter_mobile__14xpeyw9r sprinkles_position_relative_mobile__14xpeyw5f sprinkles_borderRadius_large_mobile__14xpeyw67 sprinkles_textAlign_left_mobile__14xpeywi7 sprinkles_boxShadow_borderNeutralLight_lightMode__14xpeyw4j sprinkles_boxShadow_borderNeutral_darkMode__14xpeyw4c typography_lightModeTone_light__1ix0i1h18 typography_darkModeTone_dark__1ix0i1h1b sprinkles_background_surface_lightMode__14xpeyw33 sprinkles_background_surfaceDark_darkMode__14xpeyw36">
+          <span class="reset_base__wwc2gv0 sprinkles_display_block_mobile__14xpeyw4z typography_fontFamily__1ix0i1h0 typography_fontWeight_regular__1ix0i1h1 typography_tone_neutral__1ix0i1h21 capsize_capsizeStyle__1omdrsc4 typography_textSize_large__1ix0i1hd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
